<resources>


    //register page
    <string name="rUsername">Username : </string>
    <string name="rGender">Gender : </string>
    <string name="rCreditCard">CreditCard : </string>
    <string name="rPassword">Password : </string>
    <string name="rCfPassword">Confirm Password : </string>
    <string name="rFingerP">Fingerprint : </string>
    <string name="tAmount">Amount :</string>
    <string name="creditCard">Credit Card</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="Scan">Scan</string>
    <string name="camera">Open Camera</string>
    <string name="transfer">Transfer</string>
    <string name="confirm">Confirm</string>
    <string name="receive">Receive</string>
    <string name="returns">Return</string>

    <string name="transaction">Transaction</string>
    <string name="Amount">Amount</string>
    <string name="Fingerprint">Fingerprint</string>
    <string name="nav_menu_about">About</string>
    <string name="logout">Logout</string>
    <string name="qrcodeDescript">Used to scan by sender</string>
    <string name="qr_message">Show this QR Code to the sender for transaction.</string>
    <string name="account">Do not have an account?</string>
    <string name="register_confirm">Registration Confirmation</string>
    <string name="scanFP">Please scan your fingerprint for confirmation.</string>
    <string name="scanQR">Please scan the target account QR Code for transaction.</string>
    <string name="transaction_history">Account Activities</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Your device should have at least one fingerprint registered in device settings)</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>

    <string name="transactionDate">   Date: </string>
    <string name="transactionAmount">   Amount: RM</string>
    <string name="transactiontype">   Activity Type: </string>
    <string name="app_name">Transaction Master</string>
    <string name="title_fingerprint">One-touch Transfer</string>
    <string name="title_activity_about">About this app</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_transaction2">Scan QR Code</string>
    <string name="title_activity_transaction1">Transaction</string>
    <string name="title_activity_transaction3">Successfully transferred</string>
    <string name="navigation_menu_title">Navigation</string>
    <string name="title_activity_register2">Register Confirmation</string>
    <string name="title_activity_register1">Register Account</string>
    <string name="edit">Edit</string>
    <string name="title_activity_show_qr">QR Code</string>

    <string name="select_customer_url">https://kongyh-wa15.000webhostapp.com/select_customer.php</string>
    <string name="insert_customer_url">https://kongyh-wa15.000webhostapp.com/insert_customer.php</string>
    <string name="insert_transaction_url">https://kongyh-wa15.000webhostapp.com/insert_transaction.php</string>
    <string name="select_qr_url">https://kongyh-wa15.000webhostapp.com/select_qr.php</string>
    <string name="select_transaction_url">https://kongyh-wa15.000webhostapp.com/select_transaction.php</string>
    <string name="update_customer_url">https://kongyh-wa15.000webhostapp.com/update_customer.php</string>

    <string name="check_Accountblc">Check Account Balance</string>
    <string name="topup_msg">Top Up Your Account Now</string>
    <string name="refresh">Refresh</string>
    <string name="rName">Name</string>
    <string name="nameR">Name :</string>
    <string name="title_activity_topup">Top Up</string>
    <string name="topup">Top Up</string>
    <string name="account_balance">Account Balance (RM):</string>
    <string name="btn_exit">Exit</string>
    <string name="charges">Charges (RM): </string>
    <string name="rCustomerID">Customer ID :</string>
    <string name="spacing">                    </string>
    <string name="about_line1">Transaction Master for Android </string>
    <string name="about_line2">Version </string>
    <string name="about_lineVersion">V1.0.0 </string>
    <string name="about_line3">Transaction Master and the Transaction Master Logo are Trademark of Transaction, Inc. All rights reserved. </string>
    <string name="about_line4">Terms of Service </string>
    <string name="customerID">Customer ID</string>
    <string name="topupDesc1">TopUp Amount: </string>
    <string name="topupDesc2">Maximum TopUp Amount is RM1000</string>
    <string name="topUpDesc3">Drag this bar to adjust the amount</string>
    <string name="FAQLink">
        <a href="http://www.google.com">FAQ</a>
    </string>
    <string name="TOSLink">
        <a href="http://www.google.com">Terms of Service</a>
    </string>
    <string name="contactNo">ContactNo: 03-40401231</string>
    <string name="WebLink1">
        <a href="http://www.google.com">www.TransactionMaster.com</a>
    </string>
</resources>
