<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_weight="0.01"
        android:text="@string/transactionDate"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="@string/transactionAmount"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="@string/transactiontype"
        android:textAlignment="viewStart"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textViewCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/charges"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textViewTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:textSize="17sp" />

</LinearLayout>